roomに鬼が誰かの情報も持たせるようにした
