# src/api/docs/swagger.json
@@ -78,6 +78,41 @@
                 }
             }
         },
+        "/api/v1/rooms/{secret_words}/deamon/{deamon}": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "部屋の鬼を更新するAPI",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "secret_words",
+                        "name": "secret_words",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "deamon",
+                        "name": "deamon",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/rooms": {
             "get": {
                 "consumes": [
